--- a/platformio.ini
+++ b/platformio.ini
@@ -42,15 +42,16 @@ monitor_filters = send_on_enter
 monitor_eol = LF
 monitor_echo = true
 lib_deps =
-    ArduinoJson@7.0.4
+    ArduinoJson@7.4.1
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
+    # ^^^ upgrading to WebSockets > 2.4.1 will break compatibility with ESP8266
     hideakitai/MsgPack@0.4.2
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.6
-    dvarrel/ESPping@1.0.4
+    dvarrel/ESPping@1.0.5
     jpb10/SolarCalculator@2.0.1
-    RobTillaart/UUID@0.1.6
+    RobTillaart/UUID@0.2.0
 custom_lib_deps_8266 =
     vshymanskyy/Preferences@2.1.0
 # The 'custom_sdkconfig' and 'custom_component_remove'
@@ -133,10 +134,10 @@ build_flags = ${env.build_flags} -I examples -I src
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
-    adafruit/Adafruit TCS34725@^1.4.4
-    RobTillaart/DHTNew@0.4.19
+    adafruit/Adafruit TCS34725@1.4.4
+    RobTillaart/DHTNew@0.5.3
     PaulStoffregen/OneWire@2.3.8
-    https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+    adafruit/Adafruit NeoPixel@1.13.0
 
 # ESP32-CAM
 [env:smart-sensor-psram]
@@ -146,10 +147,10 @@ build_flags = ${env.build_flags} -I examples -I src
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"33"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
-           adafruit/Adafruit TCS34725@^1.4.4
-           RobTillaart/DHTNew@0.4.19
+           adafruit/Adafruit TCS34725@1.4.4
+           RobTillaart/DHTNew@0.5.3
            PaulStoffregen/OneWire@2.3.8
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 # ESP32-S3-CAM
 [env:smart-sensor-s3-n16r8v]
@@ -159,13 +160,13 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D ARDUINO_USB_CDC_ON_BOOT=0
               -D BOARD_HAS_PSRAM
               -D BOARD_HAS_RGB_LED
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"2","stld-typ":"82","stld-spd":"0","stld-pin":"48", "camr-typ":"esps3-cam"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"2","stld-typ":"82","stld-spd":"0","stld-pin":"48"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
-           adafruit/Adafruit TCS34725@^1.4.4
-           RobTillaart/DHTNew@0.4.19
+           adafruit/Adafruit TCS34725@1.4.4
+           RobTillaart/DHTNew@0.5.3
            PaulStoffregen/OneWire@2.3.8
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:smart-sensor-c3]
 board = esp32-c3-devkitc-02
@@ -219,18 +220,19 @@ lib_ignore =
     ESP32_BleSerial
 
 [env:smart-sensor-display]
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D DISABLE_AUTOMATION
+build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D DISABLE_BLUETOOTH -D DISABLE_LVGL
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.partitions = ./src/partitions.csv
 lib_deps = ${env:smart-sensor.lib_deps}
-           lovyan03/LovyanGFX@1.1.16
+           lovyan03/LovyanGFX@1.2.7
+           lewisxhe/SensorLib@0.3.1
 
 [env:smart-sensor-display-s3]
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3
+build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER
               -D ESP32S3_DEV -D BOARD_HAS_PSRAM
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","motn-pms": "sleep", "disp-typ":"GC9A01","imus-typ":"QMI8658-dis","imus-sda":"6","imus-scl":"7","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"none","motn-pin":"16"}'
 build_src_filter = ${env:smart-sensor-display.build_src_filter}
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -240,7 +242,29 @@ board_build.flash_mode = qio
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 lib_deps = ${env:smart-sensor.lib_deps}
-           lovyan03/LovyanGFX@1.1.16
+           lovyan03/LovyanGFX@1.2.7
+           lvgl/lvgl@8.4.0
+#           lvgl/lvgl@^9.2.2
+           lewisxhe/SensorLib@0.3.1
+
+[env:smart-sensor-display-s3-opi]
+board = esp32-s3-devkitc-1
+build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3 -D ESP32_S3_LCD_CAM -D ESP_CAMERA_SUPPORTED
+              -D ESP32S3_DEV -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","disp-typ":"ST7789","imus-typ":"QMI8658","imus-sda":"48","imus-scl":"47","io-typ01":"Dimmer","io-pin01":"","io-typ02":"Dimmer","io-pin02":"","sdht-typ":"none","sdht-pin":"","motn-typ":"none","motn-pin":""}'
+build_src_filter = ${env:smart-sensor-display.build_src_filter}
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+board_build.arduino.memory_type = qio_opi
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+board_build.partitions = default_16MB.csv
+board_upload.flash_size = 16MB
+lib_deps = ${env:smart-sensor.lib_deps}
+           lovyan03/LovyanGFX@1.2.7
+           lvgl/lvgl@8.4.0
+#           lvgl/lvgl@^9.2.2
+           lewisxhe/SensorLib@0.3.1
 
 
 [env:x10-transceiver]
@@ -256,7 +280,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_deps = ${env:x10-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:x10-transceiver-s3]
 board = esp32-s3-fh4r2
@@ -266,7 +290,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_deps = ${env:x10-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:x10-transceiver-s3-nano]
 board = arduino_nano_esp32
@@ -275,7 +299,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_deps = ${env:x10-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:x10-transceiver-d1-mini]
 platform = espressif8266@2.6.3
@@ -315,7 +339,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:rf-transceiver-s3]
 board = esp32-s3-fh4r2
@@ -325,7 +349,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:rf-transceiver-s3-nano]
 board = arduino_nano_esp32
@@ -334,7 +358,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
 build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 
 [env:ir-transceiver]
@@ -363,7 +387,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:ir-transceiver.build_src_filter}
 lib_deps = ${env:ir-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:ir-transceiver-s3]
 board = esp32-s3-fh4r2
@@ -373,7 +397,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = ${env:ir-transceiver.build_src_filter}
 lib_deps = ${env:ir-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:ir-transceiver-s3-nano]
 board = arduino_nano_esp32
@@ -382,7 +406,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
 build_src_filter = ${env:ir-transceiver.build_src_filter}
 lib_deps = ${env:ir-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 
 [env:ir-rf-transceiver]
@@ -415,7 +439,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
 lib_deps = ${env:ir-rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:ir-rf-transceiver-s3]
 board = esp32-s3-fh4r2
@@ -425,7 +449,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
 lib_deps = ${env:ir-rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:ir-rf-transceiver-s3-nano]
 board = arduino_nano_esp32
@@ -434,14 +458,14 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
 build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
 lib_deps = ${env:ir-rf-transceiver.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 
 [env:color-light]
 build_flags = ${env.build_flags} -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:color-light-d1-mini]
 platform = espressif8266@2.6.3
@@ -500,8 +524,8 @@ lib_ignore =
 build_flags = ${env.build_flags} -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-motor>
 lib_deps = ${env.lib_deps}
-    arduino-libraries/Stepper@^1.1.3
-    madhephaestus/ESP32Servo@^1.1.1
+    arduino-libraries/Stepper@1.1.3
+    madhephaestus/ESP32Servo@1.2.1
 
 [env:smart-motor-c3]
 board = esp32-c3-devkitc-02
@@ -512,7 +536,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:smart-motor.build_src_filter}
 lib_deps = ${env:smart-motor.lib_deps}
-    https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:smart-motor-s3]
 board = esp32-s3-fh4r2
@@ -525,7 +549,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = ${env:smart-motor.build_src_filter}
 lib_deps = ${env:smart-motor.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 [env:smart-motor-s3-nano]
 board = arduino_nano_esp32
@@ -534,7 +558,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
 build_src_filter = ${env:smart-motor.build_src_filter}
 lib_deps = ${env:smart-motor.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           adafruit/Adafruit NeoPixel@1.13.0
 
 
 
