Updated smart-sensor-display firmware README.md

--- a/platformio.ini
+++ b/platformio.ini
@@ -230,9 +230,9 @@ lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-display-s3]
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER
+build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3
               -D ESP32S3_DEV -D BOARD_HAS_PSRAM
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","motn-pms": "sleep", "disp-typ":"GC9A01","imus-typ":"QMI8658-dis","imus-sda":"6","imus-scl":"7","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"none","motn-pin":"16"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1", "motn-pms": "sleep", "disp-typ":"GC9A01","imus-typ":"QMI8658-dis","imus-sda":"6","imus-scl":"7","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = ${env:smart-sensor-display.build_src_filter}
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
