Fixed *Sensor.Level* event value normalization in *SwitchControlActivity*.

--- a/platformio.ini
+++ b/platformio.ini
@@ -144,7 +144,7 @@ lib_deps = ${env.lib_deps}
 build_flags = ${env.build_flags} -I examples -I src
               -D ESP_CAMERA_SUPPORTED -D DISABLE_BLUETOOTH
               -D BOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"33"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"33","camr-typ":"esp32-cam"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
            adafruit/Adafruit TCS34725@1.4.4
@@ -160,7 +160,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D ARDUINO_USB_CDC_ON_BOOT=0
               -D BOARD_HAS_PSRAM
               -D BOARD_HAS_RGB_LED
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"2","stld-typ":"82","stld-spd":"0","stld-pin":"48"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"2","stld-typ":"82","stld-spd":"0","stld-pin":"48","camr-typ":"esp32-cam"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
            adafruit/Adafruit TCS34725@1.4.4
