--- a/platformio.ini
+++ b/platformio.ini
@@ -220,7 +220,7 @@ lib_ignore =
     ESP32_BleSerial
 
 [env:smart-sensor-display]
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D DISABLE_BLUETOOTH -D DISABLE_LVGL
+build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ENABLE_SCREEN_SAVER -D DISABLE_BLUETOOTH -D DISABLE_LVGL
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.partitions = ./src/partitions.csv
@@ -230,7 +230,7 @@ lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-display-s3]
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D ENABLE_UI -D ENABLE_SCREEN_SAVER
               -D ESP32S3_DEV -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1", "motn-pms": "sleep", "disp-typ":"GC9A01","imus-typ":"QMI8658-dis","imus-sda":"6","imus-scl":"7","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = ${env:smart-sensor-display.build_src_filter}
@@ -249,7 +249,7 @@ lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-display-s3-opi]
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ENABLE_UI -D ESP32_S3 -D ESP32_S3_LCD_CAM -D ESP_CAMERA_SUPPORTED
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D ENABLE_UI -D ENABLE_SCREEN_SAVER -D ESP32_S3_LCD_CAM -D ESP_CAMERA_SUPPORTED
               -D ESP32S3_DEV -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","disp-typ":"ST7789","imus-typ":"QMI8658","imus-sda":"48","imus-scl":"47","io-typ01":"Dimmer","io-pin01":"","io-typ02":"Dimmer","io-pin02":"","sdht-typ":"none","sdht-pin":"","motn-typ":"none","motn-pin":""}'
 build_src_filter = ${env:smart-sensor-display.build_src_filter}
